# unnamed-voxel-game

./: .clang-tidy  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: CompileShader.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  compiler.cmake  conan.cmake
documents/: stream_log.org
shaders/: terrain.frag.glsl  terrain.vert.glsl  terrain_meshing.comp.glsl  wireframe.frag.glsl  wireframe.vert.glsl
src/: CMakeLists.txt  app.cpp  app.hpp  first_person_camera.hpp  main.cpp  marching_cubes.cpp  marching_cubes.hpp  mesh.hpp  vertex.hpp
src/terrain/: chunk_manager.cpp  chunk_manager.hpp  marching_cube_tables.cpp  marching_cube_tables.hpp
src/vulkan_helpers/: buffer.cpp  buffer.hpp  commands.cpp  commands.hpp  context.cpp  context.hpp  debug_utils.cpp  debug_utils.hpp  deletion_queue.hpp  descriptor.cpp  descriptor.hpp  descriptor_allocator.cpp  descriptor_allocator.hpp  descriptor_pool.cpp  descriptor_pool.hpp  error_handling.hpp  expected.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  shader_module.cpp  shader_module.hpp  swapchain.cpp  swapchain.hpp  sync.cpp  sync.hpp  unique_resource.hpp  vk_check.hpp
src/window_helpers/: window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
test/: CMakeLists.txt
